--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^12.29.2",
     "gsap": "^3.14.2",
     "lucide-react": "^0.561.0",
+    "mongodb": "^7.0.0",
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1",
